<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="my_app_portfolio">My App Portfolio</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="toast_movies">This Button will launch my Popular Movies App</string>
    <string name="toast_hawk">This Button will launch my Stock Hawk App</string>
    <string name="toast_bigger">This Button will launch my Build it Bigger App</string>
    <string name="toast_material">This Button will launch my Material App</string>
    <string name="toast_ubiquitous">This Button will launch my Ubiquitous App</string>
    <string name="toast_capstone">This Button will launch my Capstone App</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
